--- a/css-tricks/projects/tooltip/tooltip1/index.html
+++ b/css-tricks/projects/tooltip/tooltip1/index.html
@@ -11,7 +11,7 @@
     http-equiv="X-UA-Compatible"
     content="ie=edge"
   >
-  <title>CSS Trick - Shining Text Animation</title>
+  <title>Tooltip</title>
   <link
     rel="icon"
     type="image/png"
@@ -26,7 +26,7 @@
 <body>
 
 <span
-  tooltip="tooltip here"
+  tooltip="tooltip on the top"
   tooltip-position="top"
 >
   <input type="text" />
