--- a/js-sandbox/html/plotly.html
+++ b/js-sandbox/html/plotly.html
@@ -183,7 +183,7 @@
                             x1: 1,
                             y0: 70,
                             y1: 79.2596,
-                            fillcolor: '#7b7b7b',
+                            fillcolor: '#7B7B7B',
                             line: {
                                 width: 0
                             }
@@ -198,7 +198,8 @@
                     },
                     xaxis: {
                         type: 'date',
-                        tickformat: '%b %e, %y'
+                        tickformat: '%b %e, %y',
+                        autorange: 'reversed'
                     },
                     hovermode: 'closest',
                     // template: { data: { scatter: [{ type: 'scatter' }] } },
